<resources>
    <string name="app_name">BTSMovie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre</string>
    <string name="error_retrieve_genre">Error Retrieve Genre</string>
    <string name="error_retrieve_movie_data">Error Retrieve Movie Data</string>
    <string name="detail_movie_poster">Detail Movie Poster</string>
    <string name="image_reviewer">Image Reviewer</string>
    <string name="play_icon">Play Icon</string>
    <string name="trailer_thumbnail">Trailer Thumbnail</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="detail_backdrop_photo">Detail Backdrop Photo</string>
    <string name="list_of_movie_genre_image">List of Movie Genre Image</string>
</resources>